chore: before css wiring

--- a/index.css
+++ b/index.css
@@ -1,6 +1,6 @@
-@import url('./shoelace.css');
-@import url('./theme.css');
-@import url('./vars.css');
+@import url('./css/hoelace.css');
+@import url('./css/theme.css');
+@import url('./css/vars.css');
 
 
 *,
