--- a/styles/index.css
+++ b/styles/index.css
@@ -1,4 +1,4 @@
-@import url("vars.css");
+@import url("tokens.css");
 @import url("shoelace.css");
 @import url("theme.css");
 @import url("dashboard.css");
