--- a/components/dashboard/sidebar/sidebar.html
+++ b/components/dashboard/sidebar/sidebar.html
@@ -1,4 +1,4 @@
-<!doctype html>
+
     <sl-drawer label="W3hubs" placement="left" class="drawer-placement-left">
       <sl-menu>
         <sl-menu-item>
@@ -46,7 +46,7 @@
     <sl-button>Open Drawer</sl-button>
     <script>
 
-    </script><!-- SIDEBAR-ACTIVE-HILITE -->
+    </script>
 <script>
 (() => {
   const p = location.pathname.replace(/\/+$/,'').toLowerCase();
